tests/idris2/error/perror008/Issue1224b.idr
import ggg

t : Int
t = yyy
